feat: UI&ADF improvement